Overlap tooltip style fix

--- a/src/common/SizeForm.scss
+++ b/src/common/SizeForm.scss
@@ -109,6 +109,7 @@
       background-color: $bg_color;
       color: black;
       padding: 5px 5px 5px 20px;
+      margin: 0;
       max-width: 170px;
       list-style-type: disc;
       border-radius: $border_radius $border_radius 0 0;
